# qspm

./: CMakeLists.txt  README.md  config.hpp.in  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  power.cpp  power.hpp  spm_es_MX.ts
